  which is keyed with the full names of fields, for further parsing fields of BYETS or STRING type.
* Wireshark is able to decode, play and save iLBC payload on platforms where iLBC library (https://github.com/TimothyGu/libilbc) is available.
* Decode As entries can now be copied from other profiles using a button in the dialog.

// === Removed Features and Support

//=== Removed Dissectors

// === New File Format Decoding Support

// [commaize]
// --
// --

=== New Protocol Support

// Add one protocol per line between the -- delimiters.
[commaize]
--
Cisco MisCabling Protocol (MCP)
OBSAI UDP-based Communication Protocol (UDPCP)
AudioCodes Debug Recording (ACDR)
Tunnel Extensible Authentication Protocol (TEAP)
USB Printer (USBPRINTER)
Java Debug Wire Protocol (JDWP)
ScyllaDB RPC
Dynamic Link Exchange Protocol (DLEP)
LBM Stateful Resolution Service (LBMSRS)
Asphodel Protocol
Technically Enhanced Capture Module Protocol (TECMP)
--

=== Updated Protocol Support

Too many protocols have been updated to list here.

=== New and Updated Capture File Support

// There is no new or updated capture file support in this release.
// Add one file type per line between the -- delimiters.
[commaize]
--
--

// === New and Updated Capture Interfaces support

//_Non-empty section placeholder._

// === Major API Changes

== Getting Wireshark

Wireshark source code and installation packages are available from
https://www.wireshark.org/download.html.

=== Vendor-supplied Packages

Most Linux and Unix vendors supply their own Wireshark packages. You can
usually install or upgrade Wireshark using the package management system
specific to that platform. A list of third-party packages can be found
on the https://www.wireshark.org/download.html#thirdparty[download page]
on the Wireshark web site.

== File Locations

Wireshark and TShark look in several different locations for preference
files, plugins, SNMP MIBS, and RADIUS dictionaries. These locations vary